# based-board-firmware

./: .clang-format  .clang-format-ignore  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  compose.yml  run-clang-format.py  update_changelog
.github/: issue_template.md  pull_request_template.md
.github/workflow/: hardware.yml
.github/workflows/: build.yml  changelog.yml  check-formatting.yml  check-linting.yml  formatting.yml  hardware.yml  lint.yml  twojastra.yml
cmake/: arm-none-eabi-gcc-toolchain.cmake
dockerfiles/alpine/: Dockerfile
dockerfiles/debian/: Dockerfile
docs/: CLion.md  Debugging.md
prj/cube/: Blink.ioc  basedboard.ioc  chad.ioc  sd_card.ioc
prj/linker/: STM32F412RETX_FLASH.ld
prj/openocd/: stm32f4blackpill.cfg
prj/openocd/clion_debug_cfg.run/: openocd debug & run.run.xml
prj/openocd_toCheck/: stm32l4discovery.cfg
prj/openocd_toCheck/clion_debug_cfg.run/: openocd debug & run.run.xml
src/: main.cpp
src/bsp/: bsp.h
src/bsp/Source/: bsp.c  isr.c
src/bsp/configs/: stm32f4xx_hal_conf.h
src/proxy/: README.md  sd.cpp  sd.h
src/proxy/sd/: README.md  sd_proxy.cpp  sd_proxy.h
toolchain/: setup_arm_gcc.sh
